click handle added

--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -11,3 +11,10 @@
 .product-img{
     margin-right: 10px;
 }
+.cart-button{
+    background-color: goldenrod;
+    border: 1px solid gray;
+    border-radius: 5px;
+    width: 150px;
+    height: 30px;
+}
